mesa: add missing texel fetch code for sRGB DXT formats

Fixes http://bugs.freedesktop.org/show_bug.cgi?id=58548